Fix navbar spacing issue Add typing effect

--- a/assets/css/my_edits.css
+++ b/assets/css/my_edits.css
@@ -30,7 +30,7 @@
   }
 
 /*
-	navbar code from w3schools.com
+	top sticky navbar code from w3schools.com
 */
 /* Style the navbar */
 #navbar {
@@ -39,15 +39,16 @@
   z-index: 3;
 }
 
+
 /* Navbar links */
-#navbar a {
+/* #navbar a {
   float: left;
   display: block;
   color: #f2f2f2;
   text-align: center;
   padding: 14px;
   text-decoration: none;
-}
+} */
 
 /* Page content */
 .content {
@@ -70,3 +71,52 @@ html {
     scroll-behavior: touch;
   }
   
+
+/*
+ Mobile Navigation Menu from w3schools code
+ */
+
+ /* Style the navigation menu */
+.topnav {
+  overflow: hidden;
+  background-color: #333;
+  position: fixed; /* Set the navbar to fixed position */
+  top: 0; /* Position the navbar at the top of the page */
+  width: 100%; /* Full width */s
+}
+
+/* Hide the links inside the navigation menu (except for logo/home) */
+.topnav #myLinks {
+  display: none;
+}
+
+/* Style navigation menu links */
+.topnav a {
+  color: white;
+  padding: 14px 16px;
+  text-decoration: none;
+  font-size: 17px;
+  display: block;
+}
+
+/* Style the hamburger menu */
+.topnav a.icon {
+  background: black;
+  display: block;
+  position: absolute;
+  right: 0;
+  top: 0;
+}
+
+/* Add a grey background color on mouse-over */
+.topnav a:hover {
+  background-color: rgb(14, 172, 132);
+  color: rgb(0, 0, 0);
+  font-weight: bold;
+}
+
+/* Style the active link (or home/logo) */
+.active {
+  background-color: rgb(0, 90, 75);
+  color: white;
+}
